--- a/hero-tour/src/app/heroes/heroes.component.html
+++ b/hero-tour/src/app/heroes/heroes.component.html
@@ -8,7 +8,19 @@
 
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
-    <span class="badge">{{hero.id}} </span> {{hero.name}}
+  <li *ngFor="let hero of heroes"> <!--for loop syntax-->
+    <button type="button" (click)="onSelect(hero)"> <!--event binding syntax-->
+      <span class="badge">{{hero.id}}"</span>
+        {{hero.name}}
+      </button>
   </li>
 </ul>
+
+<div *ngIf="selectedHero"> <!--display only if exists-->
+  <h2>{{selectedHero.name | uppercase}} Details</h2>
+  <div>id: {{selectedHero.id}}</div>
+  <div>
+    <label for="hero-name">Hero name: </label>
+    <input type="text" id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name"> <!--bidirectional binding-->
+  </div>
+</div>
