--- a/hero-tour/src/app/heroes/heroes.component.html
+++ b/hero-tour/src/app/heroes/heroes.component.html
@@ -1,18 +1,12 @@
-<!--<h2>{{hero.name | uppercase}}</h2>-->
-<!--<div><span>id: </span>{{hero.id}}</div>-->
-<!--<div>-->
-<!--  <label for="name">Hero name: </label>-->
-<!--  <input type="text" id="name" [(ngModel)]="hero.name" placeholder="name">-->
-<!--</div>-->
-
-
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes"> <!--for loop syntax-->
-    <button type="button" (click)="onSelect(hero)"> <!--event binding syntax-->
+    <button
+      [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">
+      <!--CLASS:conditional class binding  CLICK: event binding syntax-->
       <span class="badge">{{hero.id}}"</span>
-        {{hero.name}}
-      </button>
+      <span class="name">{{hero.name}}</span>
+    </button>
   </li>
 </ul>
 
