--- a/hero-tour/src/app/heroes/heroes.component.html
+++ b/hero-tour/src/app/heroes/heroes.component.html
@@ -9,12 +9,4 @@
     </button>
   </li>
 </ul>
-
-<div *ngIf="selectedHero"> <!--display only if exists-->
-  <h2>{{selectedHero.name | uppercase}} Details</h2>
-  <div>id: {{selectedHero.id}}</div>
-  <div>
-    <label for="hero-name">Hero name: </label>
-    <input type="text" id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name"> <!--bidirectional binding-->
-  </div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail> <!--one way property binding-->
