heroes details page

--- a/hero-tour/src/app/hero-detail/hero-detail.component.html
+++ b/hero-tour/src/app/hero-detail/hero-detail.component.html
@@ -4,5 +4,6 @@
   <div>
     <label for="hero-name">Hero name: </label>
     <input type="text" id="hero-name" [(ngModel)]="hero.name" placeholder="name"> <!--bidirectional binding-->
+    <button type="button" (click)="goBack()">go back</button>
   </div>
 </div>
