--- a/hero-tour/src/app/heroes/heroes.component.html
+++ b/hero-tour/src/app/heroes/heroes.component.html
@@ -1,12 +1,8 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes"> <!--for loop syntax-->
-    <button
-      [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">
-      <!--CLASS:conditional class binding  CLICK: event binding syntax-->
-      <span class="badge">{{hero.id}}"</span>
-      <span class="name">{{hero.name}}</span>
-    </button>
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span>{{hero.name}}
+    </a>
   </li>
 </ul>
-<app-hero-detail [hero]="selectedHero"></app-hero-detail> <!--one way property binding-->
