save changes to hero name

--- a/hero-tour/src/app/hero-detail/hero-detail.component.html
+++ b/hero-tour/src/app/hero-detail/hero-detail.component.html
@@ -6,4 +6,5 @@
     <input type="text" id="hero-name" [(ngModel)]="hero.name" placeholder="name"> <!--bidirectional binding-->
   </div>
   <button type="button" (click)="goBack()">go back</button>
+  <button type="button" (click)="save()">save</button>
 </div>
